--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -7,21 +7,21 @@
 
     <fragment
         android:id="@+id/add_list"
-        android:name="com.example.finalnote_project.menu.Addlist"
-        android:label="Aboutme"
+        android:name="com.example.finalnote_project.fragment.Addlist"
+        android:label="add_list"
         tools:layout="@layout/fragment_addlist" >
 
         <action
-            android:id="@+id/action_add_list_to_contactFragment"
-            app:destination="@id/contactFragment" />
+            android:id="@+id/action_add_list_to_"
+            app:destination="@id/my_tram" />
     </fragment>
     <fragment
-        android:id="@+id/contactFragment"
-        android:name="com.example.finalnote_project.menu.Myteam"
-        android:label="Contact"
+        android:id="@+id/my_tram"
+        android:name="com.example.finalnote_project.fragment.Myteam"
+        android:label="my_team"
         tools:layout="@layout/fragment_myteam" >
         <action
-            android:id="@+id/action_contactFragment_to_add_list"
+            android:id="@+id/action_my_tram_to_add_list"
             app:destination="@id/add_list" />
     </fragment>
 </navigation>
